feat: deploy on aws lamba staging environment with cdk